--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<header>meow meow</header>
+<html>
+
+<style>
+    body {
+      background-image: url('https://ih1.redbubble.net/image.5019914303.0525/flat,220x200,075,t.jpg');
+    }
+</style>
+
+<h1>meow meow</h1>
+
+</html>
